more dark mode minor fixes
* fix an error in the logs

* fix card answers not having proper colouring
** adding a bigger border on selected cards to indicate that its selected - changing the background colour would be more of a hassle :p

--- a/src/css/darkmodemaths.css
+++ b/src/css/darkmodemaths.css
@@ -124,6 +124,10 @@ p, h1, h2, h3, h4, h5, h6 {
     background: #3b3b37 !important;
 }
 
+.SparxPlusCardContentSelected {
+    border-width: 5px;
+}
+
 .SparxPlusTextFieldComponent,
 .SparxPlusTextField {
     background: #3b3b37 !important;
